More link fixes and remove text decorations for phone nubmers on iPhone

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -65,8 +65,14 @@ p {
 a {
   text-decoration: none !important;
 }
+
 .container {
   padding: 0;
   width: calc(100vw - 100px);
   max-width: 1300px;
+}
+
+a[href^="tel"]{
+  color:inherit;
+  text-decoration:none;
 }
